force-app/main/default/objects/APXTConga4__Conga_Email_Template__c/fields/AutoCloseCase__c.field-meta.xml
<CustomField>
    <fullName>AutoCloseCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if the Case needs to be Autoclosed when Email is sent out</description>
    <label>AutoCloseCase</label>
    <type>Checkbox</type>
</CustomField>