force-app/main/default/objects/APXTConga4__Conga_Email_Template__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aircraft Schedule Change/Notification</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Delay Handling</fullName>
            </value>
            <value>
                <fullName>Accommodation/Reimbursement of Expenses</fullName>
            </value>
            <value>
                <fullName>Impact on Itinerary</fullName>
            </value>
            <value>
                <fullName>Overbooked Flight</fullName>
            </value>
            <value>
                <fullName>Re-Bookings</fullName>
            </value>
            <value>
                <fullName>Seating Change</fullName>
            </value>
            <value>
                <fullName>Fees/Cost/Price</fullName>
            </value>
            <value>
                <fullName>Refunds</fullName>
            </value>
            <value>
                <fullName>Seating Requests</fullName>
            </value>
            <value>
                <fullName>Ticket Changes</fullName>
            </value>
            <value>
                <fullName>Ticket Errors</fullName>
            </value>
            <value>
                <fullName>Staff Assistance</fullName>
            </value>
            <value>
                <fullName>Announcements</fullName>
            </value>
            <value>
                <fullName>Airport Security</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Cabin Baggage</fullName>
            </value>
            <value>
                <fullName>Check-In</fullName>
            </value>
            <value>
                <fullName>Customer behaviour/Customer offload</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Valet</fullName>
            </value>
            <value>
                <fullName>Medical - Assistance Provided</fullName>
            </value>
            <value>
                <fullName>Medical - Patient</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Beverage Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Catering Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Facilities/Signage</fullName>
            </value>
            <value>
                <fullName>Purchased Lounge Pass</fullName>
            </value>
            <value>
                <fullName>Customs/Immigration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>