force-app/main/default/objects/APXTConga4__Conga_Email_Template__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>