force-app/main/default/objects/APXTConga4__Conga_Email_Template__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flight Disruptions</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Departure Airport</fullName>
            </value>
            <value>
                <fullName>Lounges</fullName>
            </value>
            <value>
                <fullName>Arrival Airport</fullName>
            </value>
            <value>
                <fullName>In-Flight</fullName>
            </value>
            <value>
                <fullName>Frequent Flyer</fullName>
            </value>
            <value>
                <fullName>Qantas.com</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Flight Cancelled by Qantas</fullName>
            </value>
            <value>
                <fullName>Personal Property Lost In-flight</fullName>
            </value>
            <value>
                <fullName>Damaged Baggage</fullName>
            </value>
            <value>
                <fullName>Proof of Boarding or No Show</fullName>
            </value>
            <value>
                <fullName>Delayed Flight</fullName>
            </value>
            <value>
                <fullName>Baggage Delivery   Delayed Baggage</fullName>
            </value>
            <value>
                <fullName>Blank Template</fullName>
            </value>
            <value>
                <fullName>Delayed or Lost Baggage</fullName>
            </value>
            <value>
                <fullName>Acknowledgement Template</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
                <isActive>false</isActive>
                <label>Query</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>