force-app/main/default/objects/APXTConga4__Conga_Email_Template__c/fields/Sub_category__c.field-meta.xml
<CustomField>
    <fullName>Sub_category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QF Booking Throughfare</fullName>
            </value>
            <value>
                <fullName>QF booking single Sector</fullName>
            </value>
            <value>
                <fullName>Agent booking</fullName>
            </value>
            <value>
                <fullName>Diversions</fullName>
            </value>
            <value>
                <fullName>Poor Communication</fullName>
            </value>
            <value>
                <fullName>Airport Co-ordination</fullName>
            </value>
            <value>
                <fullName>Specific Needs</fullName>
            </value>
            <value>
                <fullName>Misconnected on separate PNR</fullName>
            </value>
            <value>
                <fullName>Missed event</fullName>
            </value>
            <value>
                <fullName>Length of Delay</fullName>
            </value>
            <value>
                <fullName>Rebooked</fullName>
            </value>
            <value>
                <fullName>No Suitable alternative</fullName>
            </value>
            <value>
                <fullName>Rebooking day of travel</fullName>
            </value>
            <value>
                <fullName>Flight Cancelled, No alternative</fullName>
            </value>
            <value>
                <fullName>Rebooking Error, Customer purchased new flight</fullName>
            </value>
            <value>
                <fullName>Rebooking – Rebooked next day</fullName>
            </value>
            <value>
                <fullName>Incorrectly denied entry</fullName>
            </value>
            <value>
                <fullName>Denied Entry in line with Policy</fullName>
            </value>
            <value>
                <fullName>Flight Status board</fullName>
            </value>
            <value>
                <fullName>Facilities or Cleanliness</fullName>
            </value>
            <value>
                <fullName>Not able to use</fullName>
            </value>
            <value>
                <fullName>Denied entry</fullName>
            </value>
            <value>
                <fullName>Catering Selection</fullName>
            </value>
            <value>
                <fullName>Foreign object in food/food poisoning</fullName>
            </value>
            <value>
                <fullName>Catering Quality</fullName>
            </value>
            <value>
                <fullName>Compassionate fares</fullName>
            </value>
            <value>
                <fullName>Fees and Charges</fullName>
            </value>
            <value>
                <fullName>Pricing on selected routes</fullName>
            </value>
            <value>
                <fullName>Refund of QF Ticket</fullName>
            </value>
            <value>
                <fullName>Refund of Travel Agent ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>